samples/_failures_safe/1761527579_9eab16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd2bb922.c: In function ‘main’:
./samples/SAFE/__tmp_bd2bb922.c:158:25: error: missing terminating " character
  158 |         fprintf(stderr, "Decomp
      |                         ^~~~~~~
./samples/SAFE/__tmp_bd2bb922.c:158:9: error: expected expression at end of input
  158 |         fprintf(stderr, "Decomp
      |         ^~~~~~~
./samples/SAFE/__tmp_bd2bb922.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd2bb922.c:158:9: error: expected declaration or statement at end of input
